[gd_scene load_steps=4 format=3 uid="uid://8cmeaqc6ym14"]

[ext_resource type="Texture2D" uid="uid://b2jk4ajjkgs5" path="res://static/icons/dice.svg" id="1_04d7p"]
[ext_resource type="Script" path="res://apps/create_a_pet/interface/form_personality_attributes.gd" id="1_77jmk"]
[ext_resource type="Script" path="res://interface/components/pill_range.gd" id="2_y33j6"]

[node name="FormPersonalityAttributes" type="VBoxContainer"]
offset_left = 24.0
offset_top = 24.0
offset_right = 710.0
offset_bottom = 466.0
script = ExtResource("1_77jmk")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
offset_right = 686.0
offset_bottom = 80.0

[node name="Label" type="Label" parent="HBoxContainer2"]
offset_top = 5.0
offset_right = 594.0
offset_bottom = 74.0
size_flags_horizontal = 3
theme_type_variation = &"H3"
text = "Personality"

[node name="RandomPersonalityButton" type="Button" parent="HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
offset_left = 606.0
offset_right = 686.0
offset_bottom = 80.0
theme_type_variation = &"SubtleButton"
icon = ExtResource("1_04d7p")
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_top = 92.0
offset_right = 686.0
offset_bottom = 442.0
size_flags_vertical = 3
theme_override_constants/separation = 36

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(550, 300)
offset_right = 550.0
offset_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 0
columns = 5

[node name="ActiveRange" type="Range" parent="HBoxContainer/GridContainer"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 3
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 101.0
offset_bottom = 249.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 5.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
allow_greater = false
allow_lesser = false
script = ExtResource("2_y33j6")
direction = 1
inverted = true

[node name="CleanRange" type="Range" parent="HBoxContainer/GridContainer"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 3
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 113.0
offset_top = 0.0
offset_right = 214.0
offset_bottom = 249.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 5.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
allow_greater = false
allow_lesser = false
script = ExtResource("2_y33j6")
direction = 1
inverted = true

[node name="PlayfulRange" type="Range" parent="HBoxContainer/GridContainer"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 3
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 226.0
offset_top = 0.0
offset_right = 326.0
offset_bottom = 249.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 5.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
allow_greater = false
allow_lesser = false
script = ExtResource("2_y33j6")
direction = 1
inverted = true

[node name="SmartRange" type="Range" parent="HBoxContainer/GridContainer"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 3
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 338.0
offset_top = 0.0
offset_right = 438.0
offset_bottom = 249.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 5.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
allow_greater = false
allow_lesser = false
script = ExtResource("2_y33j6")
direction = 1
inverted = true

[node name="SocialRange" type="Range" parent="HBoxContainer/GridContainer"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 3
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 450.0
offset_top = 0.0
offset_right = 550.0
offset_bottom = 249.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 5.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
allow_greater = false
allow_lesser = false
script = ExtResource("2_y33j6")
direction = 1
inverted = true

[node name="Label" type="Label" parent="HBoxContainer/GridContainer"]
offset_top = 249.0
offset_right = 101.0
offset_bottom = 300.0
text = "Active"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label2" type="Label" parent="HBoxContainer/GridContainer"]
offset_left = 113.0
offset_top = 249.0
offset_right = 214.0
offset_bottom = 300.0
text = "Clean"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label3" type="Label" parent="HBoxContainer/GridContainer"]
offset_left = 226.0
offset_top = 249.0
offset_right = 326.0
offset_bottom = 300.0
text = "Playful"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label4" type="Label" parent="HBoxContainer/GridContainer"]
offset_left = 338.0
offset_top = 249.0
offset_right = 438.0
offset_bottom = 300.0
text = "Smart"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label5" type="Label" parent="HBoxContainer/GridContainer"]
offset_left = 450.0
offset_top = 249.0
offset_right = 550.0
offset_bottom = 300.0
text = "Social"
horizontal_alignment = 1
vertical_alignment = 2

[node name="BankRange" type="Range" parent="HBoxContainer"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(100, 350)
layout_direction = 0
layout_mode = 3
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 586.0
offset_top = 0.0
offset_right = 686.0
offset_bottom = 350.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 15.0
step = 1.0
page = 0.0
value = 15.0
exp_edit = false
rounded = true
allow_greater = false
allow_lesser = false
script = ExtResource("2_y33j6")
direction = 1
inverted = true
disabled = true
const_override_h_separation = 0
const_override_v_separation = 6
